--- a/main.tex
+++ b/main.tex
@@ -16,8 +16,7 @@
 \usepackage{tasks}
 \usepackage{tikz}
 \usepackage{newunicodechar}
-\newunicodechar{√}{$\sqrt{\phantom{x}}$} 
-\newunicodechar{∑}{$\sum$}
+\newunicodechar{√}{$\sqrt{\phantom{x}}$} \newunicodechar{∑}{$\sum$}
 
 \settasks{label=\arabic*.}
 \settasks{after-item-skip=1pt}
@@ -101,7 +100,7 @@
 		\section{DSU Kruskal's Algorithm MST}
 		\inputminted{cpp}{codes/DSU_KRUSKALS_ALGORITHM_MST.cpp}
 		
-		\section{Exclution DP}
+		\section{Exclusion DP}
 		\inputminted{cpp}{codes/exclutionDP.cpp}
 		
 		\section{Fenwick Tree 2D}
@@ -137,6 +136,9 @@
 		
 		\section{KMP}
 		\inputminted{cpp}{codes/KMP.cpp}
+
+		\section{LIS With Vector Pair}
+		\inputminted{cpp}{codes/LIS_WITH_VECTOR_PAIR.cpp}
 		
 		\section{Longest Path in DAG}
 		\inputminted{cpp}{codes/LONGEST_PATH_IN_DAG.cpp}
@@ -179,6 +181,9 @@
 		
 		\section{Stress Testing}
 		\inputminted{cpp}{codes/STRESS_TESTING.cpp}
+		
+		\section{String Stream}
+		\inputminted{cpp}{codes/STRINGSTREAM.cpp}
 		
 		\section{Sublime Build}
 		\inputminted{cpp}{codes/SUBLIME_BUILD.cpp}
